src/objects/Einstein_API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Predict_Vision_Endpoint__c</fullName>
        <label>Predict Vision Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registered_Email__c</fullName>
        <label>Registered Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Token_Expiration_Seconds__c</fullName>
        <label>Token Expiration Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Uploaded_Vision_Dataset_Image__c</fullName>
        <label>User Uploaded Vision Dataset Image</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Dataset_Details_Endpoint__c</fullName>
        <label>Vision Dataset Details Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Dataset_Folder_Id__c</fullName>
        <label>Vision Dataset Folder Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Dataset_Training_Status_Endpoint__c</fullName>
        <label>Vision Dataset Training Status Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Model_Id__c</fullName>
        <label>Vision Model Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Train_Dataset_Endpoint__c</fullName>
        <label>Vision Train Dataset Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Upload_Dataset_Endpoint__c</fullName>
        <label>Vision Upload Dataset Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_User_Predict_Image__c</fullName>
        <label>Vision User Predict Image</label>
        <type>TextArea</type>
    </fields>
    <label>Einstein API Settings</label>
</CustomObject>